<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/blue_0188cc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="back"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/operation_steps_title"
            android:textColor="@color/white_ffffff"
            android:textSize="18sp" />


        <View
            style="@style/divider_line"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_999999" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/operation_steps_1"
        android:textColor="@color/blue_0188cc"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/operation_steps_1_content"
        android:textColor="@color/grey_808080"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:text="@string/operation_steps_2"
        android:textColor="@color/blue_0188cc"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/wall_switch_operation_steps_2_content"
        android:textColor="@color/grey_808080"
        android:textSize="12sp" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:src="@drawable/wall_switch_step2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/operation_steps_3"
        android:textColor="@color/blue_0188cc"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="@string/wall_switch_operation_steps_3_content"
        android:textColor="@color/grey_808080"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1.0"
        android:src="@drawable/wall_switch_step3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/shape_corner_btn_bg"
        android:gravity="center"
        android:onClick="plugBlinking"
        android:text="@string/wall_switch_blinking"
        android:textColor="@color/white_ffffff"
        android:textSize="18sp" />
</LinearLayout>
