<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_ffffff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/scan_device_name"
        android:textColor="@color/black_333333"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_device_mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/scan_device_mac"
        android:textColor="@color/black_333333"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_device_rssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/scan_device_rssi"
        android:textColor="@color/black_333333"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_device_raw_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/scan_device_raw_data"
        android:textColor="@color/black_333333"
        android:textSize="14sp" />

    <View
        style="@style/divider_line"

        android:layout_marginTop="12dp" />
</LinearLayout>