<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/blue_0188cc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="back"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_device_title"
            android:textColor="@color/white_ffffff"
            android:textSize="18sp" />


        <View
            style="@style/divider_line"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_999999" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/add_wall_switch_tips"
        android:textColor="@color/grey_808080"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/wall_switch_ap_mode" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <TextView
        android:id="@+id/not_blinking_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="notBlinking"
        android:text="@string/not_blinking_red_tips"
        android:textColor="@color/blue_0188cc"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape_corner_btn_bg"
        android:gravity="center"
        android:onClick="wallSwitchBlinking"
        android:text="@string/wall_switch_blinking"
        android:textColor="@color/white_ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/support_wifi_tips"
        android:textColor="@color/grey_808080"
        android:textSize="12sp" />
</LinearLayout>
