<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wifi_input_title"
        android:textColor="@color/black_333333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/wifi_input_ssid"
            android:textColor="@color/black_333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_ssid"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginLeft="90dp"
            android:background="@drawable/shape_corner_btn_bg_white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/wifi_input_password"
            android:textColor="@color/black_333333"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:layout_marginLeft="90dp"
            android:background="@drawable/shape_corner_btn_bg_white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:singleLine="true"
            android:text="" />
    </RelativeLayout>
</LinearLayout>