<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/blue_0188cc">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="back"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/white_ffffff"
            android:textSize="18sp" />


        <View
            style="@style/divider_line"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_999999" />
    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical"
        android:onClick="settingForDevice"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/settings_mqtt_device"
        android:textColor="@color/black_333333"
        android:textSize="18sp" />


    <View
        style="@style/divider_line"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_d9d9d9" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:drawableRight="@drawable/arrow_right"
        android:gravity="center_vertical"
        android:onClick="settingForAPP"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/settings_mqtt_app"
        android:textColor="@color/black_333333"
        android:textSize="18sp" />


    <View
        style="@style/divider_line"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_d9d9d9" />

</LinearLayout>
