<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_f2f2f2"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/blue_0188cc">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_device_title"
            android:textColor="@color/white_ffffff"
            android:textSize="18sp" />


        <View
            style="@style/divider_line"
            android:layout_alignParentBottom="true"
            android:background="@color/grey_999999" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/modify_device_name_conn_success"
        android:textColor="@color/blue_0188cc"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_nick_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_corner_btn_bg_white"
        android:maxLength="20"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/black_333333"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="75dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:background="@drawable/shape_corner_btn_bg"
        android:gravity="center"
        android:onClick="modifyDone"
        android:text="@string/modify_device_name_done"
        android:textColor="@color/white_ffffff"
        android:textSize="18sp" />

</LinearLayout>
